# risk_assess

./: .gitignore  .gitmodules  CMakeLists.txt  DeriveUpdates.ipynb  DriverlessMPC_CircLineCost_casadi2forces.c  DriverlessMPC_CircLineCost_model_1.c  DriverlessMPC_CircLineCost_model_50.c  MNVQF Infinite Series Method.ipynb  README.md  Untitled.ipynb  approximate_quadratic_cdf.ipynb  characteristic_function.py  creating_risk_estimation_functions.ipynb  data_generator.py  example_icra_stuff.py  example_uncontrolled.py  geom_utils.py  icra_formulation_example.py  kinematic_car.py  linear_uncertainty.m  models.py  mvn_quad_form.py  plan_verifier.py  plotting_utils.py  precompute_poly.py  propagated_gaussian_nongaussian.ipynb  random_objects.py  random_objects_test.py  random_variables.py  random_vector.py  requirements.txt  setup.py  setup.sh  some_nice_plots.ipynb  stochastic_verification_functions.py  sympy_experiments.ipynb  test.py  test_accel_noise.py  test_icra_stuff.py  test_uncontrolled.py  (+2 more)
.ipynb_checkpoints/: DeriveUpdates-checkpoint.ipynb  DeriveUpdatesExperiment-checkpoint.ipynb  creating_risk_estimation_functions-checkpoint.ipynb  sympy_experiments-checkpoint.ipynb
carla/: carla.yml  collect_vehicle_data.py
examples/: example_accel_noise.py  example_icra_formulation.py  example_icra_stuff.py  example_uncontrolled.py  example_uncontrolled_monte_carlo.py  icra_formulation_example.py  params.yaml  position_risk_assessment.py  test_risk_assessment.py  utils.py
matlab/: calc_beta_moments.m  chebyshev.m  chebyshev_prob_fail_bound.m
prediction/: data.py  loss.py  (+5 more)
(+1086 files in other folders)
